Keep -xfP backward compatible but don't allow -C/--dir with -xfP